# derive_convert

./: Cargo.toml  LICENSE  README.md
src/: derive_convert.rs  derive_into.rs  enum_convert.rs  lib.rs  struct_convert.rs  util.rs
src/attribute_parsing/: conversion_enum.rs  conversion_field.rs  conversion_meta.rs  mod.rs
tests/cases/: basic.rs  test_complex_conversions.rs  test_enum_conversions.rs  test_field_attributes.rs  test_struct_conversions.rs
